# task-manager-mini-fastapi

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
