[project]
name = "task-manager-mini-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "bcrypt==3.2.2",
    "cffi==1.17.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "ecdsa==0.19.0",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "h11==0.14.0",
    "httptools==0.6.4",
    "idna==3.10",
    "passlib==1.7.4",
    "pycparser==2.22",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pyjwt==2.10.1",
    "pymongo==4.10.1",
    "python-dotenv==1.0.1",
    "python-jose==3.4.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "rsa==4.9",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.41.3",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "watchfiles==1.0.3",
    "websockets==14.1",
]
